sticky header, fix td borders for sticky column, add missing flexbox styles, remove hardcoded row heights, allow wrapping on text fields

--- a/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
+++ b/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
@@ -26,6 +26,12 @@ $edit-icon-font-size: 18px;
 .qbGrid {
     //margin: 2px;
 
+    flex: 1 1 auto;
+    overflow:auto;
+    display:block;
+    width:100%;
+    border-collapse: initial; // needed for sticky column
+
     .qbIcon {
         font-size: $grid-group-expand-icon-size;
         width: $grid-group-expand-icon-size;
@@ -113,8 +119,6 @@ $edit-icon-font-size: 18px;
 
     .cellWrapper {
         width: 100%;
-        //this adjusts the height for rendered rows
-        margin-bottom: -8px;
         //this adjusts the height for rendered rows
         padding-top: 6px;
         //Turns out it works better without a min width
@@ -226,6 +230,8 @@ $edit-icon-font-size: 18px;
 
 .qbGrid > thead > tr > th {
     min-width: 80px;
+    position:relative;
+    z-index:1;
     white-space: nowrap;
     border-right: 1px solid $color-blue-400;
     border-bottom: 2px solid $badcolor1-color6;
@@ -261,7 +267,6 @@ $edit-icon-font-size: 18px;
 
 .qbGrid > tbody > tr > td {
     //Added padding-left and padding-right to match the AGGrid view layout
-    height: $form-view-box-height;
     padding-left: 6px;
     padding-right: 6px;
     vertical-align: top;
@@ -462,7 +467,6 @@ $edit-icon-font-size: 18px;
 .multiLineTextCell {
     border: 0;
     //margin: 0;
-    height: 32px;
     //margin-bottom: -90px;
     font-family: $font-family;
     font-size: $grid-font-size;
@@ -471,13 +475,16 @@ $edit-icon-font-size: 18px;
 }
 //The style here is for sticky column
 .qbGrid > tbody > tr > td:first-of-type {
-    height: 32px;
     background: $row-bg-color;
     z-index: 1000;
-    outline: $row-cell-border-color
 }
 
 .qbHeaderCell.stickyCell {
     position: relative;
     z-index: 1;
+}
+
+// first column td z-index is 1000
+th.qbHeaderCell.stickyCell {
+    z-index: 1001;
 }
